--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "yargs": "^6.6.0"
   },
   "dependencies": {
+    "gl-matrix": "^2.4.0",
     "js-util": "git://github.com/ykob/js-util.git",
     "jstransformer-markdown-it": "^2.0.0"
   }
