--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
+    "imagemin-mozjpeg": "^6.0.0",
     "imagemin-pngquant": "^5.0.1",
     "licensify": "^3.1.3",
     "merge-stream": "^1.0.1",
