--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "yargs": "^12.0.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "easing-js": "^1.1.2",
     "gl-matrix": "^2.4.0",
     "js-util": "git://github.com/ykob/js-util.git",
